--- a/css/styles.css
+++ b/css/styles.css
@@ -1,784 +1,22 @@
-:root {
-  --primary-header-color: #212121;
-  --second-header-color: #757575;
-  --accent-header-color: #2196f3;
-  --primary-body-color: #ffffff;
-  --second-body-color: #212121;
-  --accent-body-color: #2196f3;
-  --primary-footer-color: #ffffff;
-  --second-footer-color: #2f303a;
-  --accent-footer-color: #2196f3;
-  --icons-primary-color: #afb1b8;
-  --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-body {
-  font-family: 'Roboto', 'Raleway';
-  color: #ffffff;
-}
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0px;
-}
-ul {
-  margin: 0px;
-  padding-left: 0px;
-}
-img {
-  display: block;
-  max-height: 100%;
-}
-.list {
-  list-style: none;
-}
-.flex {
-  display: flex;
-}
-.conteiner {
-  width: 1200px;
-  padding: 0px 15px;
-  margin: 0px auto;
-}
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-/* ----------Header--------- */
-.header {
-  border-bottom: 1px solid #ececec;
-}
-.header-div {
-  display: flex;
-  align-items: center;
-}
-.nav-header {
-  align-items: center;
-}
-.logo {
-  padding-top: 24px;
-  padding-bottom: 24px;
-
-  color: #000000;
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-}
-.web {
-  color: var(--accent-header-color);
-}
-.nav-header > ul {
-  margin-left: 93px;
-}
-.nav-header li:not(:last-child) {
-  margin-right: 50px;
-}
-.header-link {
-  padding-top: 32px;
-  padding-bottom: 31px;
-
-  color: var(--primary-header-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  transition: var(--main-transition);
-}
-.li-header {
-  margin-right: 50px;
-}
-.head-ul {
-  margin-left: auto;
-}
-.header-tel {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 31px;
-
-  color: var(--second-header-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  transition: var(--main-transition);
-}
-.header-link:hover,
-.header-link:focus,
-.header-tel:focus,
-.header-tel:hover {
-  color: var(--accent-header-color);
-}
-.header-icon {
-  height: 16px;
-  width: 16px;
-  margin-right: 10px;
-  fill: currentColor;
-}
 /* ---------Body---------- */
-.hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/BackgroundFon.jpg');
-  background-repeat: no-repeat;
-}
-.hero > .conteiner {
-  text-align: center;
-}
-.hero-tittle {
-  margin-bottom: 30px;
-
-  color: var(--primary-body-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-}
-.hero-button {
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--second-body-color);
-  width: 216px;
-  height: 50px;
-  cursor: pointer;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border-style: none;
-}
-.hero-button:hover,
-.hero-button:focus {
-  background: var(--accent-body-color);
-  color: var(--primary-body-color);
-  transition: var(--main-transition);
-}
 
 /* --------Opportunity-------- */
-.opportunity > li:not(:last-child) {
-  margin-right: 30px;
-}
-.opportunity {
-  margin: 0px auto;
-}
-.opportunity > li {
-  max-width: 270px;
-}
-.tittle-opportunity {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--second-body-color);
-}
-.text-opportunity {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-.tittle-section {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-body-color);
-}
-.svg-opportunity {
-  margin-bottom: 30px;
-  display: flex;
-  width: 270px;
-  height: 120px;
-  align-items: center;
-  justify-content: center;
-  background: #f5f4fa;
-  border-radius: 4px;
-  border: ;
-}
-.svg-icon-oppor {
-  width: 70px;
-  height: 70px;
-}
+
 /* ---------What We DO-------- */
-.we-do > li:not(:last-child) {
-  margin-right: 30px;
-}
-.section.what-we-do {
-  padding-top: 0px;
-}
+
 /* ---------Section Наша Команда---------- */
-.hero-team {
-  background: #f5f4fa;
-}
-.tittle-team {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-body-color);
-}
-.tittle-team-worker {
-  margin-top: 30px;
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-body-color);
-}
-.list-worker {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background: var(--primary-body-color);
-}
-.hero-team .list-worker:not(:last-child) {
-  margin-right: 30px;
-}
-.tittle-worker-text {
-  margin-bottom: 16px;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-.hero-team ul {
-  margin: 0px;
-}
-.icons-list-team {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  fill: var(--icons-primary-color);
-  transition: fill var(--main-transition);
-}
-.Developer:not(:last-child) {
-  margin-right: 10px;
-}
-.Igor {
-  margin-left: 32px;
-  margin-bottom: 30px;
-}
-.icon-our-team {
-  width: 20px;
-  height: 20px;
-}
 
-.icons-list-team:hover,
-.icons-list-team:focus {
-  background-color: #2196f3;
-  fill: var(--primary-body-color);
-  border-radius: 50%;
-}
 /* -------Section Our Clients------- */
-.link-svg-clients {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  fill: #afb1b8;
-  transition: var(--main-transition);
-}
-.link-svg-clients:hover {
-  fill: #2196f3;
-  border: 1px solid #2196f3;
-}
-.svg-clients {
-  width: 106px;
-  height: 60px;
-}
-.tittle-clients {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-.flex-list-li:not(:last-child) {
-  margin-right: 30px;
-}
+
 /* --------footer---------- */
-.basement {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: var(--second-footer-color);
-}
-.logo-footer {
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--primary-footer-color);
-  text-decoration: none;
-}
-.list-address {
-  margin-bottom: 9px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--primary-footer-color);
-  text-decoration: none;
-  transition: var(--main-transition);
-}
-.list-tel {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  text-decoration: none;
-  transition: var(--main-transition);
-}
-.list-tel:hover,
-.list-tel:focus {
-  color: var(--accent-footer-color);
-}
-.list-address:hover,
-.list-address:focus {
-  color: var(--accent-footer-color);
-}
-.style-address {
-  padding-top: 20px;
-  font-style: inherit;
-}
-.basement ul {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.item-footer:not(:last-child) {
-  margin-bottom: 9px;
-}
-.footer-social {
-  margin-top: 10px;
-  margin-left: 70px;
-}
-.tittle-add {
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 
-  color: #ffffff;
-}
-.icons-list-team.borders {
-  fill: #ffffff;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.1);
-  transition: var(--main-transition);
-}
-.icons-list-team.borders:hover,
-.icons-list-team.borders:focus {
-  background-color: #2196f3;
-}
 /* ---------Body Portfolio---------- */
-.portfolio-btn {
-  margin-bottom: 50px;
-  padding: 6px 22px;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-body-color);
-  height: 38px;
-  left: 548px;
-  top: 174px;
-  background: #f5f4fa;
-  border-radius: 4px;
-  cursor: pointer;
-  border: none;
-  transition: var(--main-transition);
-}
-.portfolio-btn:hover,
-.portfolio-btn:focus {
-  background: #2196f3;
-  color: var(--primary-body-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.portfolio-tittle {
-  padding-top: 20px;
-  margin-left: 24px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--second-body-color);
-}
-.portfolio-text {
-  margin-bottom: 20px;
-  margin-left: 24px;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-.portfo-btn {
-  justify-content: center;
-}
-.portfo-btn > li:not(:last-child) {
-  margin-right: 8px;
-}
-.wrap {
-  flex-wrap: wrap;
-}
-.cont-wrap {
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-.list.flex.wrap > li:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.list.flex.wrap > li:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-}
-.list.flex.wrap > li:hover {
-  cursor: pointer;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  transition: var(--main-transition);
-}
-/* -----------Animations------------ */
-.overlay {
-  position: relative;
-  overflow: hidden;
-}
-.box {
-  display: flex;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-  transform: translateY(100%);
-  transition: transform var(--main-transition);
-}
-.list.flex.wrap > li:hover .box {
-  transform: translateY(0);
-  opacity: 1;
-}
-.technocrack {
-  display: flex;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--primary-body-color);
-  text-align: center;
-  align-items: center;
-  margin-left: 24px;
-  margin-right: 24px;
-}
-.index-overlay {
-  position: relative;
-}
-.box-decoration {
-  display: flex;
-  position: absolute;
-  width: 100%;
-  justify-content: center;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-  transform: translateY(-70px);
-}
-.box-decoration-tittle {
-  display: flex;
-  align-items: center;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 
-  color: var(--primary-body-color);
-}
-.active {
-  color: #2196f3;
-  position: relative;
-}
-.active::after {
-  content: '';
-  left: 0;
-  bottom: 0;
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 5px;
-  background: #2196f3;
-  border-radius: 2px;
-}
+/* -----------Animations------------ */
+
 
 /* ---------Modal Window-------- */
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
 
-  width: 100%;
-  height: 100%;
+/* -------- forms--------
+ */
 
-  background: rgba(0, 0, 0, 0.2);
-  transition: var(--main-transition);
-}
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-.modal {
-  padding: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  min-width: 528px;
-  min-height: 581px;
-
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
-.modal-button-close {
-  cursor: pointer;
-  display: flex;
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  justify-content: center;
-  align-items: center;
-
-  width: 30px;
-  height: 30px;
-  padding: 0;
-
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  background-color: #ffffff;
-  transition: var(--main-transition);
-}
-.modal-tittle {
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-.form-field {
-  color: #212121;
-  display: block;
-  margin-bottom: 10px;
-}
-.form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-left: 42px;
-  transition: var(--main-transition);
-}
-.form-area {
-  margin-bottom: 20px;
-  padding: 12px 16px;
-  width: 100%;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: var(--main-transition);
-}
-.form-label {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: #757575;
-}
-.form-area::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-.form-field label {
-  display: block;
-  margin-bottom: 4px;
-}
-.check-label {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-  display: flex;
-  align-items: center;
-}
-.button-submit {
-  display: block;
-  width: 200px;
-  height: 50px;
-  margin: auto;
-  cursor: pointer;
-
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-}
-.checkbox-link {
-  margin-left: 5px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-}
-.checkbox {
-  margin-left: 12px;
-  margin-bottom: 30px;
-}
-.checkbox-phone {
-  width: 18px;
-  height: 18px;
-}
-.icon-phone {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-}
-.input-icon {
-  position: relative;
-}
-.form-input:hover,
-.form-input:focus {
-  border-color: #2196f3;
-  outline: transparent;
-}
-.form-input:focus + svg,
-.form-input:hover + svg {
-  fill: #2196f3;
-}
-.form-area:hover,
-.form-area:focus {
-  border-color: #2196f3;
-  outline: transparent;
-}
-.modal-button-close:hover > svg,
-.modal-button-close:focus > svg {
-  fill: #2196f3;
-}
-.check-label::before {
-  content: '';
-  width: 16px;
-  height: 15px;
-  border: 2px solid #303030;
-  border-radius: 2px;
-  margin-right: 7px;
-  margin-left: 12px;
-}
-.checkbox:checked + label::before {
-  border: none;
-  background-repeat: no-repeat;
-  background-image: url(../images/check.svg);
-  background-color: #2196f3;
-  background-position: center;
-}
-.agreament {
-  margin-bottom: 30px;
-}
-textarea {
-  resize: none;
-}
-.form-input-foot {
-  width: 358px;
-  margin-right: 12px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  outline: transparent;
-  background-color: #2f303a;
-  padding-left: 16px;
-  transition: var(--main-transition);
-  color: rgba(255, 255, 255, 0.6);
-}
-.form-label-foot {
-  display: block;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.footer-form {
-  margin-left: 93px;
-}
-.button-foot {
-  cursor: pointer;
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.86;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-}
-.join-foot-icon {
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
-  transform: translateY(30%);
-}
