--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -19,6 +19,13 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: var(--main-transition);
+  &::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 }
 .form-label {
   font-size: 12px;
@@ -26,13 +33,7 @@
   letter-spacing: 0.01em;
   color: #757575;
 }
-.form-area::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
+
 .form-field label {
   display: block;
   margin-bottom: 4px;
