--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -8,11 +8,12 @@
   border-radius: 4px;
   fill: #afb1b8;
   transition: var(--main-transition);
+  &:hover {
+    fill: #2196f3;
+    border: 1px solid #2196f3;
+  }
 }
-.regular-customers__link:hover {
-  fill: #2196f3;
-  border: 1px solid #2196f3;
-}
+
 .regular-customers__svg {
   width: 106px;
   height: 60px;
