--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -25,10 +25,11 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: var(--primary-body-color);
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.team-worker:not(:last-child) {
-  margin-right: 30px;
-}
+
 .team-worker__text {
   margin-bottom: 16px;
   font-size: 16px;
@@ -45,6 +46,12 @@
   height: 44px;
   fill: var(--icons-primary-color);
   transition: fill var(--main-transition);
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+    fill: var(--primary-body-color);
+    border-radius: 50%;
+  }
 }
 .Developer:not(:last-child) {
   margin-right: 10px;
@@ -56,11 +63,4 @@
 .Developer__svg {
   width: 20px;
   height: 20px;
-}
-
-.Developer__icons:hover,
-.Developer__icons:focus {
-  background-color: #2196f3;
-  fill: var(--primary-body-color);
-  border-radius: 50%;
 }
